fix: attempt four to fix landing page content overflowing out of the video background

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -70,8 +70,6 @@ body {
 
 .landing-page-content {
   z-index: 2;
-  position: relative;
-  top: 25%;
 }
 
 .landing-page-title {
